# bitcart-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  justfile  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sync_generator.py  test-requirements.txt
.circleci/: config.yml
.github/: zizmor.yml
.github/actions/install_dependencies/: action.yml
.github/actions/upload-results/: action.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml  test_and_deploy.yml
bitcart/: __init__.py  coin.py  errors.py  event_delivery.py  logger.py  manager.py  sync.py  types.py  utils.py  version.py
bitcart/coins/: __init__.py  bch.py  bnb.py  bsty.py  btc.py  eth.py  grs.py  gzro.py  ln.py  ltc.py  matic.py  sbch.py  trx.py  xmr.py  xrg.py  xrp.py
bitcart/providers/: jsonrpcrequests.py
bitcart_async/: __init__.py  coin.py
bitcart_async/coins/: __init__.py  btc.py  ln.py
bitcart_async/providers/: jsonrpcrequests.py
docs/: api.rst  apimanager.rst  conf.py  events.rst  hooks.py  index.rst  installation.rst
docs/content/: CNAME  api.md  apimanager.md  events.md  index.md  installation.md
docs/css/: extra.css
examples/: README.md  donateto.py  full.py  getbalance.py  gettx.py  manager.py  requirements.txt  webhook.py  websocket.py
examples/atomic_tipbot/: .gitignore  README.md  bot.py  config.ini.example  reqirements.txt  requirements.txt
tests/: conftest.py  regtest.py  test_async_to_sync.py  test_coin.py  test_jsonrpcrequests.py  test_manager.py  test_spec.py  test_utils.py  utils.py
tests/asynctosync/: test_usage.py
tests/coins/: test_btc.py
tests/coins/btc/: test_event_delivery.py  test_events.py  test_lightning.py  test_with_wallet.py  test_without_wallet.py  test_wo_wallet.py
tests/regtest/: regtest.sh  start_bitcoind.sh
